--- a/package.json
+++ b/package.json
@@ -7,15 +7,27 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "autoprefixer": "^10.4.5",
+    "bootstrap": "^5.2.0",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.10.1",
+    "material-icons": "^1.11.10",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
     "vue-class-component": "^7.2.3",
+    "vue-html2pdf": "^1.8.0",
+    "vue-material": "^1.0.0-beta-15",
+    "vue-notification": "^1.3.20",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
+    "vuetify": "^2.6.0",
+    "vuetify-dialog": "^2.0.17",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@mdi/font": "^7.0.96",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
@@ -25,6 +37,8 @@
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5",
-    "vue-template-compiler": "^2.6.14"
+    "vue-cli-plugin-vuetify": "~2.5.1",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0"
   }
 }
