--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build", 
-    "deploy" : "sh deploy.sh"
+    "build": "vue-cli-service build",
+    "deploy": "sh deploy.sh"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "autoprefixer": "^10.4.5",
+    "axios": "^1.2.0",
     "bootstrap": "^5.2.0",
     "core-js": "^3.8.3",
     "html2pdf.js": "^0.10.1",
     "material-icons": "^1.11.10",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
-    "vue-axios": "^3.4.1",
+    "vue-axios": "^3.5.2",
     "vue-class-component": "^7.2.3",
     "vue-html2pdf": "^1.8.0",
     "vue-material": "^1.0.0-beta-15",
